<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/peach"
    tools:context=".triviacat.Main2Activity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="38dp"
        android:textColor="@color/darkaqua"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/choose"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textColor="@color/darksalmon"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@color/orange"
        android:textColor="@color/lightblue"
        android:text="@string/breed" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/lightblue"
        android:textColor="@color/orange"
        android:layout_marginBottom="10dp"
        android:text="@string/famousCats" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/orange"
        android:textColor="@color/lightblue"
        android:layout_marginBottom="10dp"
        android:text="@string/funFacts" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/lightblue"
        android:textColor="@color/orange"
        android:layout_marginBottom="10dp"
        android:text="@string/random" />
</LinearLayout>