<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/peach"
    tools:context=".triviacat.Game">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/gameName"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="38dp"
        android:textColor="@color/darkaqua"/>

    <TextView
        android:id="@+id/counterView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="25dp"
        android:text="LIVES: 9" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/heart1"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/heart"/>
        <ImageView
            android:id="@+id/heart2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/heart"/>
        <ImageView
            android:id="@+id/heart3"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/heart"/>
        <ImageView
            android:id="@+id/heart4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/heart"/>
        <ImageView
            android:id="@+id/heart5"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/heart"/>
        <ImageView
            android:id="@+id/heart6"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/heart"/>
        <ImageView
            android:id="@+id/heart7"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/heart"/>
        <ImageView
            android:id="@+id/heart8"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/heart"/>
        <ImageView
            android:id="@+id/heart9"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/heart"/>

    </LinearLayout>

    <TextView
        android:id="@+id/questionHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@color/orange"
        android:textAlignment="center"
        android:textColor="@color/darkaqua"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/phraseHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="26dp"
        android:textColor="@color/darkaqua"
        android:background="@color/orange"/>

    <Button
        android:id="@+id/guessLetterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/guessLetter"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="26dp"
        android:background="@color/peach"
        android:textColor="@color/darkaqua"/>

    <Button
        android:id="@+id/guessPhraseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/guessFinal"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:background="@color/peach"
        android:textColor="@color/darkaqua"/>

</LinearLayout>